fix bug for footer input field when running on iOS

--- a/lottecon_svn/resource/css/reset.css
+++ b/lottecon_svn/resource/css/reset.css
@@ -39,5 +39,3 @@ input:read-only, input:disabled { background: #efeeee !important;}
     url(../font/NanumGothicBold.woff) format('woff'),
     url(../font/NanumGothicBold.ttf) format('truetype');
 }
-/* padding */
-.noPaddingTop {padding-top: 0 !important;}
